re-writes attack time function to reduce complexity

--- a/notebooks/Envelope Extraction.ipynb
+++ b/notebooks/Envelope Extraction.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
      "text": [
       "../datasets/guitar/vibrato.wav\n",
       "\n",
-      "Attack time: 0.0014512471655328798\n",
+      "Attack time: 0.0027437641723356007\n",
       "\n"
      ]
     },
@@ -69,7 +69,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -89,16 +89,17 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def attack_time(signal, onset, srate):\n",
+    "# its also possible to just take the difference between the onset index\n",
+    "# and the argmax\n",
+    "def attack_time(signal, onset, srate, win_size, hop_size):\n",
     "    '''\n",
     "    Computes the attack time by\n",
     "    finding the time to the first frame that has a has a lower \n",
     "    magnitude than the previous frame (onset peak) since the onset. \n",
     "    \n",
-    "    Note: Not sure if taking the absolute value is neccesary here or not\n",
+    "    Note: Not sure if taking the absolute value of the signal is \n",
+    "    neccesary here or not\n",
     "    '''\n",
-    "    win_size = 128\n",
-    "    hop_size = 64\n",
     "    offsets = np.arange(onset, len(signal), hop_size)\n",
     "    \n",
     "    for o in offsets[:-1]: \n",
@@ -108,14 +109,23 @@
     "        next_avg_mag = np.mean(next_frame)\n",
     "        if avg_mag > next_avg_mag:\n",
     "            return (o - onset) / srate\n",
+    "\n",
+    "def attack_time_alt(signal, onset, srate):\n",
+    "    '''\n",
+    "    Computes attack time by taking the difference of the onset index\n",
+    "    '''\n",
+    "    return (np.argmax(np.abs(signal)) - onset)/srate\n",
     "    \n",
+    "win_size = 256\n",
+    "hop_size = 128        \n",
     "fname = '../datasets/guitar/vibrato.wav'\n",
     "first_onset = get_onsets(fname)[0]\n",
     "signal, sr = sf.read(filename)\n",
     "\n",
     "print(f\"{fname}\\n\")\n",
     "\n",
-    "attack_t = attack_time(signal, first_onset, sr)\n",
+    "# attack_t = attack_time(signal, first_onset, sr, win_size, hop_size)\n",
+    "attack_t = attack_time_alt(signal, first_onset, sr)\n",
     "\n",
     "plt.title(\"Onset Signal\")\n",
     "plt.plot(signal[onsets[0]:20000])\n",
