shows results of both

--- a/notebooks/Envelope Extraction.ipynb
+++ b/notebooks/Envelope Extraction.ipynb
@@ -112,7 +112,8 @@
     "\n",
     "def attack_time_alt(signal, onset, srate):\n",
     "    '''\n",
-    "    Computes attack time by taking the difference of the onset index\n",
+    "    Computes attack time by taking the difference \n",
+    "    of the argmax and onset and dividing by the sampling rate\n",
     "    '''\n",
     "    return (np.argmax(np.abs(signal)) - onset)/srate\n",
     "    \n",
