--- a/notebooks/Envelope Construction.ipynb
+++ b/notebooks/Envelope Construction.ipynb
@@ -11,44 +11,9 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Functions copied from oscillator notebook for testing purposes\n",
-    "def sinusoid(freq=440.0, dur=1.0, srate=44100.0, amp=1.0, phase = 0.0): \n",
-    "    t = np.linspace(0,dur,int(srate*dur))\n",
-    "    data = amp * np.sin(2*np.pi*freq *t+phase)\n",
-    "    return data\n",
-    "\n",
-    "def oscillator(freq=440.0, dur=1.0, srate=44100.0, amp=1.0, phase=0.0, wave_type='sinusoid'):\n",
-    "    \n",
-    "    if wave_type not in ['sinusoid', 'triangle', 'square']:\n",
-    "        return None\n",
-    "    \n",
-    "    if wave_type == 'sinusoid':\n",
-    "        return sinusoid(freq=freq, dur=dur, srate=srate, amp=amp, phase=phase)\n",
-    "    \n",
-    "    wave = sinusoid(freq=freq, dur=dur, amp=amp)\n",
-    "    \n",
-    "    for i in range(1,20):\n",
-    "        harmonic = 2*i+1\n",
-    "        sin = sinusoid(freq=freq*harmonic, dur=dur, amp=amp)\n",
-    "        if wave_type == 'triangle':\n",
-    "            sin = sin*(np.power(-1,i))*(harmonic**-2)\n",
-    "        else:\n",
-    "            sin = sin / harmonic\n",
-    "        wave = np.add(wave, sin)\n",
-    "        \n",
-    "    if wave_type == 'square':\n",
-    "        return wave * 4 / np.pi \n",
-    "    if wave_type == 'triangle':\n",
-    "        return wave * np.pi / 4"
+    "import IPython.display as ipd\n",
+    "from envelope_construcion import envelope_amplitude\n",
+    "from oscillator import oscillator\n"
    ]
   },
   {
@@ -70,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +52,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,19 +70,6 @@
     }
    ],
    "source": [
-    "def envelope_amplitude(envelope={}, srate=44100):\n",
-    "    if envelope == {}:\n",
-    "        return None\n",
-    "    \n",
-    "    attack = np.linspace(0.0, 1.0, int(envelope['attack'] * srate))\n",
-    "    decay = np.linspace(1.0, envelope[\"sustain\"][1], int(envelope['decay'] * srate))\n",
-    "    sustain = np.linspace(envelope[\"sustain\"][1], envelope[\"sustain\"][1], int(envelope['sustain'][0] * srate))\n",
-    "    release = np.reciprocal(np.linspace(1, 15, envelope['release'] * srate )) * envelope[\"sustain\"][1] \n",
-    "    \n",
-    "    amp_track = np.concatenate((attack, decay, sustain, release), axis=None)\n",
-    "    \n",
-    "    return amp_track, amp_track.shape[0]\n",
-    "\n",
     "# Sustain: (dur, amplitude)\n",
     "envelope = {\n",
     "    \"attack\": 0.01,\n",
