adds code for slider construction

--- a/notebooks/Extract Envelope.ipynb
+++ b/notebooks/Extract Envelope.ipynb
@@ -180,6 +180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Try looking at the change in ratio between height and total area, to find end of decay. When area/heigth "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Test Driver Code"
    ]
   },
