--- a/notebooks/Extract Envelope and generate sliders.ipynb
+++ b/notebooks/Extract Envelope and generate sliders.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import signal as sig\n",
     "import librosa\n",
+    "from src.synth import Synth\n",
+    "\n",
+    "\n",
+    "synth = Synth()\n",
     "\n",
     "def three_step_envelope(signal, K=200, freq_cutoff=0.125, padlen=150):\n",
     "    # Take the absolute value of the signal\n",
@@ -70,9 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/scipy/signal/_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  b = a[a_slice]\n"
+     ]
+    }
+   ],
    "source": [
     "import soundfile as sf\n",
     "\n",
@@ -83,9 +103,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65ad5e4d0fe44de6bc0b8f3ec5a4aaf3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatSlider(value=0.0009750566893424037, description='attack:', max=2.0, readout_format='.4f', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a9227f93a884a0ca8c3464d899d917d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "\n",
@@ -131,6 +180,8 @@
     "        \"sustain\": sustain,\n",
     "        \"release\": release\n",
     "    }\n",
+    "    synth.set_envelope(env)\n",
+    "    print(synth.get_envelope())\n",
     "    # construct envelope\n",
     "\n",
     "out = widgets.interactive_output(\n",
