adds envelope extraction helper files, and class the methods in the class and notebook for testing

--- a/notebooks/Extract Envelope and generate sliders.ipynb
+++ b/notebooks/Extract Envelope and generate sliders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +83,6 @@
      "text": [
       "[5]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/scipy/signal/_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  b = a[a_slice]\n"
-     ]
     }
    ],
    "source": [
@@ -98,18 +90,20 @@
     "\n",
     "fname = '../datasets/guitar/open-e.wav'\n",
     "signal, sr = sf.read(fname)\n",
-    "env = extract_envelope(signal, sr)"
+    "synth.set_signal(signal)\n",
+    "synth.set_srate(sr)\n",
+    "env = synth.extract_envelope()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65ad5e4d0fe44de6bc0b8f3ec5a4aaf3",
+       "model_id": "1250d1003f8a45ae97c1d0ba6e46802d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a9227f93a884a0ca8c3464d899d917d",
+       "model_id": "6c2ccc98e9964822befa25b95e9113eb",
        "version_major": 2,
        "version_minor": 0
       },
