Edit notebook to handle harmonics

--- a/notebooks/FrequencyExtraction.ipynb
+++ b/notebooks/FrequencyExtraction.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipd.Audio(OPENE_HIGH_WAV, rate=44100)"
+    "ipd.Audio(OPENA_WAV, rate=44100)"
    ]
   },
   {
@@ -139,8 +139,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, sr = librosa.load(OPENE_HIGH_WAV)\n",
-    "bin2048_to_freq = librosa.fft_frequencies(sr, 2048)"
+    "def clean_input(audio):\n",
+    "    audio_mag = np.abs(audio)\n",
+    "    audio_mag = audio_mag[np.argmax(audio_mag>0.1):]\n",
+    "    b = audio_mag[::-1]\n",
+    "    i = len(b) - np.argmax(b > 0.1) - 1\n",
+    "    audio_mag = audio_mag[:i]\n",
+    "    return audio_mag\n",
+    "def normalize(audio_signal):\n",
+    "    audio_signal = audio_signal.astype(np.float32) / 32767.0 \n",
+    "    return (0.9 / max(audio_signal)) * audio_signal"
    ]
   },
   {
@@ -149,7 +157,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stft = True\n",
+    "y, sr = librosa.load(OPENA_WAV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = normalize(y)\n",
+    "y = clean_input(y)\n",
+    "# ipd.Audio(y, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(y[:])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stft = False\n",
     "N_FFT = 2048\n",
     "if(stft):\n",
     "    frame_n = 5\n",
@@ -167,7 +206,7 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(frame[:100])"
+    "plt.plot(frame[:10000])"
    ]
   },
   {
