added set freq call to notebok

--- a/notebooks/Extract Envelope and generate sliders.ipynb
+++ b/notebooks/Extract Envelope and generate sliders.ipynb
@@ -87,6 +87,7 @@
     "\n",
     "synth = Synth(signal, sr)\n",
     "synth.set_srate(sr)\n",
+    "synth.set_frequencies()\n",
     "env = synth.extract_envelope()"
    ]
   },
@@ -149,7 +150,7 @@
     "        \"release\": release\n",
     "    }\n",
     "    synth.set_envelope(env)\n",
-    "    print(synth.get_output())\n",
+    "    print(synth.get_oscillators())\n",
     "    # construct envelope\n",
     "\n",
     "out = widgets.interactive_output(\n",
