implements oscillator UI

--- a/notebooks/Extract Envelope and generate sliders.ipynb
+++ b/notebooks/Extract Envelope and generate sliders.ipynb
@@ -157,6 +157,7 @@
     "        'sustain_power': sustain_power, 'release': release}\n",
     ")\n",
     "\n",
+    "display(ui, out)\n",
     "display(ui, out)"
    ]
   },
@@ -167,6 +168,61 @@
    "outputs": [],
    "source": [
     "plt.plot(synth.envelope_amp_track()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs = synth.set_frequencies()\n",
+    "osc_freq_widgets = [ \n",
+    "    widgets.FloatSlider(\n",
+    "        description=f\"Osc{i} Freq:\",\n",
+    "        value=freq[0],\n",
+    "        min=40,\n",
+    "        max=10000,\n",
+    "        step=10,\n",
+    "    )\n",
+    "    for (i, freq) in enumerate(freqs)\n",
+    "]\n",
+    "\n",
+    "osc_amp_widgets = [ \n",
+    "    widgets.FloatSlider(\n",
+    "        description=f\"Osc{i} Amp:\",\n",
+    "        value=freq[1],\n",
+    "        min=0,\n",
+    "        max=100,\n",
+    "        step=10,\n",
+    "    )\n",
+    "    for (i, freq) in enumerate(freqs)\n",
+    "]\n",
+    "\n",
+    "osc_wave_widgets = [ \n",
+    "    widgets.Dropdown(\n",
+    "        options=['sinusoid', 'triangle', 'square'],\n",
+    "        description=f\"Osc{i} Wave Type:\",\n",
+    "        value='sinusoid',\n",
+    "    )\n",
+    "    for (i, freq) in enumerate(freqs)\n",
+    "]\n",
+    "\n",
+    "def osc_callback(index, freq, amp, wave_type):\n",
+    "    oscillator_data = {'freq': freq, 'amp': amp, 'wave_type': wave_type, 'phase': 0}\n",
+    "    print(index, oscillator_data)\n",
+    "\n",
+    "for i in range(len(osc_freq_widgets)):\n",
+    "    freq_widget = osc_freq_widgets[i]\n",
+    "    amp_widget = osc_amp_widgets[i]\n",
+    "    wave_widget = osc_wave_widgets[i]\n",
+    "    \n",
+    "    osc_ui = widgets.VBox([freq_widget, amp_widget, wave_widget])\n",
+    "    osc_out = widgets.interactive_output(\n",
+    "        osc_callback, \n",
+    "        {'index': widgets.IntText(value=i), 'freq':freq_widget, 'amp': amp_widget, 'wave_type': wave_widget}\n",
+    "    )\n",
+    "    display(osc_ui, osc_out)"
    ]
   },
   {
