Update signal clean in freq extract

--- a/notebooks/FrequencyExtraction.ipynb
+++ b/notebooks/FrequencyExtraction.ipynb
@@ -141,11 +141,11 @@
    "source": [
     "def clean_input(audio):\n",
     "    audio_mag = np.abs(audio)\n",
-    "    audio_mag = audio_mag[np.argmax(audio_mag>0.1):]\n",
+    "    front = np.argmax(audio_mag>0.1)\n",
+    "    audio_mag = audio_mag[front:]\n",
     "    b = audio_mag[::-1]\n",
-    "    i = len(b) - np.argmax(b > 0.1) - 1\n",
-    "    audio_mag = audio_mag[:i]\n",
-    "    return audio_mag\n",
+    "    back = len(b) - np.argmax(b > 0.1) - 1\n",
+    "    return audio[front:back]\n",
     "def normalize(audio_signal):\n",
     "    audio_signal = audio_signal.astype(np.float32) / 32767.0 \n",
     "    return (0.9 / max(audio_signal)) * audio_signal"
@@ -157,7 +157,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, sr = librosa.load(OPENA_WAV)"
+    "y, sr = librosa.load(HARMONIC_WAV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(y)\n",
+    "plt.savefig('justwave.png')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -178,7 +190,8 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(y[:])\n",
+    "plt.plot(y)\n",
+    "plt.savefig('cleanwave.png')\n",
     "plt.show()"
    ]
   },
@@ -206,7 +219,8 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(frame[:10000])"
+    "plt.plot(frame[:10000])\n",
+    "plt.savefig('fftwave.png')"
    ]
   },
   {
